--- a/apply-manifest.yaml
+++ b/apply-manifest.yaml
@@ -9,7 +9,7 @@ spec:
     - name: manifest_dir
       description: The directory in source that contains yaml manifests
       type: string
-      default: "k8s"
+      default: "our-simple-node-app"
   steps:
     - name: apply
       image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
