--- a/apply-manifest.yaml
+++ b/apply-manifest.yaml
@@ -13,7 +13,7 @@ spec:
   steps:
     - name: apply
       image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
-      workingDir: /src
+      workingDir: workspace/source
       command: ["/bin/bash", "-c"]
       args:
         - |-
