--- a/apply-manifest.yaml
+++ b/apply-manifest.yaml
@@ -9,11 +9,11 @@ spec:
     - name: manifest_dir
       description: The directory in source that contains yaml manifests
       type: string
-      default: "our-simple-node-app"
+      default: "k8s"
   steps:
     - name: apply
-      image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
-      workingDir: workspace/source
+      image: quay.io/openshift/origin-cli:latest
+      workingDir: /workspace/source
       command: ["/bin/bash", "-c"]
       args:
         - |-
